option('filename-align-space', type: 'integer', min: 0, value: 16)
option('cmd-xxd-columns', type: 'integer', min: 0, value: 16)

option('enable-command-cat',  type: 'boolean', value: true)
option('enable-command-cd',   type: 'boolean', value: true)
option('enable-command-echo', type: 'boolean', value: true)
option('enable-command-help', type: 'boolean', value: true)
option('enable-command-pwd',  type: 'boolean', value: true)
option('enable-command-xxd',  type: 'boolean', value: true)
option('enable-command-ls',   type: 'boolean', value: true)

option('enable-feature-commands',     type: 'boolean', value: true)
option('enable-feature-autocomplete', type: 'boolean', value: true)
option('enable-feature-shell-styles', type: 'boolean', value: true)

option('translation-ok',                        type: 'string', value: 'ok', description: 'Translation string')
option('translation-error',                     type: 'string', value: 'error', description: 'Translation string')
option('translation-directory-not-found',       type: 'string', value: 'directory not found', description: 'Translation string')
option('translation-nested-directories-exist',  type: 'string', value: 'nested directories exist', description: 'Translation string')
option('translation-cannot-find-parent-node',   type: 'string', value: 'cannot find parent node', description: 'Translation string')
option('translation-directory-already-mounted', type: 'string', value: 'directory already mounted', description: 'Translation string')
option('translation-syntax-error',              type: 'string', value: 'syntax error', description: 'Translation string')
option('translation-wrong-arguments',           type: 'string', value: 'wrong arguments', description: 'Translation string')
option('translation-file-not-executable',       type: 'string', value: 'file not executable', description: 'Translation string')
option('translation-file-not-writable',         type: 'string', value: 'file not writable', description: 'Translation string')
option('translation-file-not-readable',         type: 'string', value: 'file not readable', description: 'Translation string')
option('translation-no-help-available',         type: 'string', value: 'no help available', description: 'Translation string')
option('translation-file-not-found',            type: 'string', value: 'file not found', description: 'Translation string')
option('translation-read-only-file',            type: 'string', value: 'read only file', description: 'Translation string')
