file(
    GLOB
    SRC_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ush.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ush_read.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ush_parse.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ush_write.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ush_prompt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ush_reset.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ush_file.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ush_node.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ush_utils.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ush_commands.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ush_process.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ush_autocomp.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/commands/ush_cmd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/commands/ush_cmd_cd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/commands/ush_cmd_help.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/commands/ush_cmd_ls.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/commands/ush_cmd_pwd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/commands/ush_cmd_cat.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/commands/ush_cmd_xxd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/commands/ush_cmd_echo.c
)

add_library(
    ${USH_TARGET}
    STATIC
    ${SRC_FILES}
)

target_include_directories(
    ${USH_TARGET}
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/inc
    ${CMAKE_CURRENT_SOURCE_DIR}/port/${USH_PORT}
)
